--- a/VisaRoomApp/VisaRoomApp.WebSite/Web.config
+++ b/VisaRoomApp/VisaRoomApp.WebSite/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-VisaRoomApp.WebSite-20150324221225;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-VisaRoomApp.WebSite-20150324221225.mdf" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=DBVisaRoom;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
