--- a/VisaRoom/VisaRoom.Web/Web.config
+++ b/VisaRoom/VisaRoom.Web/Web.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=DBVisaRoom;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DBVisaRoomEntities" connectionString="metadata=res://*/VisaModel.VModel.csdl|res://*/VisaModel.VModel.ssdl|res://*/VisaModel.VModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DBVisaRoom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+   <add name="DBVisaRoom" connectionString="metadata=res://*/Entity.VisaModel.csdl|res://*/Entity.VisaModel.ssdl|res://*/Entity.VisaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DBVisaRoom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=DBVisaRoom;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
