--- a/VisaRoom/packages/repositories.config
+++ b/VisaRoom/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\VisaRoom.DataAccess\packages.config" />
   <repository path="..\VisaRoom.Web\packages.config" />
 </repositories>
