--- a/VisaRoom/VisaRoom.Web/VisaRoom.Web.csproj
+++ b/VisaRoom/VisaRoom.Web/VisaRoom.Web.csproj
@@ -653,6 +653,9 @@
     <Content Include="Content\bower_components\wizard\jquery.bootstrap.wizard.js" />
     <Content Include="Content\bower_components\wizard\prettify.css" />
     <Content Include="Content\bower_components\wizard\prettify.js" />
+    <Content Include="Content\chosen-sprite%402x.png" />
+    <Content Include="Content\chosen-sprite.png" />
+    <Content Include="Content\chosen.css" />
     <Content Include="Content\dist\css\bootstrap-theme.css" />
     <Content Include="Content\dist\css\bootstrap-theme.min.css" />
     <Content Include="Content\dist\css\bootstrap.css" />
@@ -671,6 +674,7 @@
     <Content Include="Scripts\bootstrap-datepicker.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\chosen.jquery.js" />
     <Content Include="Scripts\html5shiv.js" />
     <Content Include="Content\dist\css\bootstrap-theme.css.map" />
     <Content Include="Content\dist\css\bootstrap.css.map" />
