--- a/VisaRoom/VisaRoom.Web/Web.config
+++ b/VisaRoom/VisaRoom.Web/Web.config
@@ -15,6 +15,7 @@
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
+    <add key="urlImages" value="\assets\UserPhotos\" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
