--- a/VisaRoom/VisaRoom.Web/VisaRoom.Web.csproj
+++ b/VisaRoom/VisaRoom.Web/VisaRoom.Web.csproj
@@ -268,34 +268,23 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\UserPhotos\find_user.png" />
-    <Content Include="Content\bower_components\bootstrap-datepicker.css" />
-    <Content Include="Content\bower_components\bootstrap\dist\css\bootstrap-theme.css" />
-    <Content Include="Content\bower_components\bootstrap\dist\css\bootstrap-theme.min.css" />
-    <Content Include="Content\bower_components\bootstrap\dist\css\bootstrap.css" />
-    <Content Include="Content\bower_components\bootstrap\dist\css\bootstrap.min.css" />
-    <Content Include="Content\bower_components\bootstrap\dist\fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="Content\bower_components\bootstrap\dist\js\bootstrap.js" />
-    <Content Include="Content\bower_components\bootstrap\dist\js\bootstrap.min.js" />
-    <Content Include="Content\bower_components\bootstrap\dist\js\npm.js" />
-    <Content Include="Content\bower_components\font-awesome\css\font-awesome.css" />
-    <Content Include="Content\bower_components\font-awesome\css\font-awesome.min.css" />
-    <Content Include="Content\bower_components\font-awesome\fonts\fontawesome-webfont.svg" />
-    <Content Include="Content\bower_components\metisMenu\dist\metisMenu.css" />
-    <Content Include="Content\bower_components\metisMenu\dist\metisMenu.js" />
-    <Content Include="Content\bower_components\metisMenu\dist\metisMenu.min.css" />
-    <Content Include="Content\bower_components\metisMenu\dist\metisMenu.min.js" />
-    <Content Include="Content\bower_components\wizard\jquery.bootstrap.wizard.js" />
-    <Content Include="Content\bower_components\wizard\prettify.css" />
-    <Content Include="Content\bower_components\wizard\prettify.js" />
+    <Content Include="Content\bootstrap-datepicker.css" />
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\chosen.css" />
-    <Content Include="Content\dist\css\sb-admin-2.css" />
-    <Content Include="Content\dist\css\timeline.css" />
-    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="Content\dist\js\sb-admin-2.js" />
-    <Content Include="Content\images\glyphicons-halflings-white.png" />
-    <Content Include="Content\images\glyphicons-halflings.png" />
-    <Content Include="Content\publicPages\style.css" />
+    <Content Include="Content\font-awesome.css" />
+    <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\metisMenu.css" />
+    <Content Include="Content\metisMenu.min.css" />
+    <Content Include="Content\prettify.css" />
+    <Content Include="Content\publicPages.css" />
     <Content Include="favicon.ico" />
+    <Content Include="fonts\chosen-sprite%402x.png" />
+    <Content Include="fonts\chosen-sprite.png" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Images\banner.jpg" />
     <Content Include="Images\hitwa1.PNG" />
@@ -319,6 +308,7 @@
     <Content Include="Images\hitwm8.PNG" />
     <Content Include="Images\hitwm9.PNG" />
     <Content Include="Images\icons-sprite.png" />
+    <Content Include="Images\Logo.png" />
     <Content Include="Images\logo241x162.png" />
     <Content Include="Images\Logo725x487.png" />
     <Content Include="Images\menu-icon.png" />
@@ -332,52 +322,16 @@
     <Content Include="Scripts\chosen.jquery.js" />
     <Content Include="Scripts\easing.js" />
     <Content Include="Scripts\html5shiv.js" />
-    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="Content\dist\fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="Content\bower_components\bootstrap\dist\css\bootstrap-theme.css.map" />
-    <Content Include="Content\bower_components\bootstrap\dist\css\bootstrap.css.map" />
-    <Content Include="Content\bower_components\bootstrap\dist\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Content\bower_components\bootstrap\dist\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="Content\bower_components\bootstrap\dist\fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="Content\bower_components\bootstrap\dist\fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="Content\bower_components\font-awesome\.bower.json" />
-    <Content Include="Content\bower_components\font-awesome\.gitignore" />
-    <Content Include="Content\bower_components\font-awesome\.npmignore" />
-    <Content Include="Content\bower_components\font-awesome\bower.json" />
-    <Content Include="Content\bower_components\font-awesome\fonts\fontawesome-webfont.eot" />
-    <Content Include="Content\bower_components\font-awesome\fonts\fontawesome-webfont.ttf" />
-    <Content Include="Content\bower_components\font-awesome\fonts\fontawesome-webfont.woff" />
-    <Content Include="Content\bower_components\font-awesome\fonts\FontAwesome.otf" />
-    <Content Include="Content\bower_components\font-awesome\less\bordered-pulled.less" />
-    <Content Include="Content\bower_components\font-awesome\less\core.less" />
-    <Content Include="Content\bower_components\font-awesome\less\extras.less" />
-    <Content Include="Content\bower_components\font-awesome\less\fixed-width.less" />
-    <Content Include="Content\bower_components\font-awesome\less\font-awesome.less" />
-    <Content Include="Content\bower_components\font-awesome\less\icons.less" />
-    <Content Include="Content\bower_components\font-awesome\less\larger.less" />
-    <Content Include="Content\bower_components\font-awesome\less\list.less" />
-    <Content Include="Content\bower_components\font-awesome\less\mixins.less" />
-    <Content Include="Content\bower_components\font-awesome\less\path.less" />
-    <Content Include="Content\bower_components\font-awesome\less\rotated-flipped.less" />
-    <Content Include="Content\bower_components\font-awesome\less\spinning.less" />
-    <Content Include="Content\bower_components\font-awesome\less\stacked.less" />
-    <Content Include="Content\bower_components\font-awesome\less\variables.less" />
-    <Content Include="Content\bower_components\font-awesome\scss\font-awesome.scss" />
-    <Content Include="Content\bower_components\font-awesome\scss\_bordered-pulled.scss" />
-    <Content Include="Content\bower_components\font-awesome\scss\_core.scss" />
-    <Content Include="Content\bower_components\font-awesome\scss\_extras.scss" />
-    <Content Include="Content\bower_components\font-awesome\scss\_fixed-width.scss" />
-    <Content Include="Content\bower_components\font-awesome\scss\_icons.scss" />
-    <Content Include="Content\bower_components\font-awesome\scss\_larger.scss" />
-    <Content Include="Content\bower_components\font-awesome\scss\_list.scss" />
-    <Content Include="Content\bower_components\font-awesome\scss\_mixins.scss" />
-    <Content Include="Content\bower_components\font-awesome\scss\_path.scss" />
-    <Content Include="Content\bower_components\font-awesome\scss\_rotated-flipped.scss" />
-    <Content Include="Content\bower_components\font-awesome\scss\_spinning.scss" />
-    <Content Include="Content\bower_components\font-awesome\scss\_stacked.scss" />
-    <Content Include="Content\bower_components\font-awesome\scss\_variables.scss" />
+    <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Content\bootstrap.css.map" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Properties\PublishProfiles\Visaroom.pubxml" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
@@ -388,6 +342,7 @@
     <Content Include="Scripts\jquery-ui-1.8.24.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.min.js" />
     <Content Include="Scripts\jquery-ui.js" />
+    <Content Include="Scripts\jquery.bootstrap.wizard.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -399,10 +354,14 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\main.js" />
+    <Content Include="Scripts\metisMenu.js" />
+    <Content Include="Scripts\metisMenu.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\modernizr.custom.53451.js" />
     <Content Include="Scripts\modernizr.custom.js" />
     <Content Include="Scripts\move-top.js" />
+    <Content Include="Scripts\npm.js" />
+    <Content Include="Scripts\prettify.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -412,7 +371,6 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Content\Site.css" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Images\accent.png" />
     <Content Include="Images\bullet.png" />
